--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -32,10 +32,15 @@ probes_dict = (
 wildcard_constraints:
     sample="[A-Za-z0-9]+",
     treatment = "[A-Z]+",
-    m_cutoff ="[0-9]+",
+    c_treatment = "[A-Z]+",
+    m_cutoff ="[0-9]+", #         m_cutoff="\d+",
     e_cutoff ="[0-9]",
     min_cov = "[0-9]+",
-    mismatch_type = "[A-Za-z5]+"
+    dist = "[0-5]",
+    mismatch_type = "[A-Za-z5]+",
+    polyT = "[A-Za-z]+",
+    reads_filter = "[noneumi]+",
+    ref_set = "[manulsectd]+",
 
 # ploting paramters
 CM = 1 / 2.54
@@ -59,9 +64,9 @@ def anticodonfamily_from_rname(rname):
 include: "rules/ref_genome.smk"
 include: "rules/alignments.smk"
 include: "rules/preprocessing_reads.smk"
-include: "rules/pre-mapping.smk"
 include: "rules/mapping.smk"
 include: "rules/filter_mappings.smk"
+include: "rules/filter_mapping_manual.smk"
 include: "rules/multimappers.smk"
 include: "rules/clustering.smk"
 include: "rules/abundance_plots.smk"
@@ -69,24 +74,36 @@ include: "rules/coverage.smk"
 include: "rules/coverage_plots.smk"
 include: "rules/modifications.smk"
 # include: "rules/probes_scan.smk"
+include: "rules/abundance.smk"
+include: "rules/abundance_pca.smk"
+include: 'rules/duplication_rate.smk'
+include: "rules/qc.smk"
+
 
 rule run_all:
     input:
-        'results/qc/mapping-summary.pdf',
-        'results/qc/cluster/editdist_hist.pdf',
-        'results/qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
-        'resources/references/alignment/selected_tRNAs.fa',
-        'resources/references/alignment/selected_tRNAs.fa_sorted.fa',
+        #'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa_sorted.fa',
+        'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa',
+        'qc/cluster/'+config['ref_set']+'/editdist_hist.pdf',
+        'qc/preprocessing_summary/preproccessing.pdf',
+        'qc/mapping-summary/mapping-'+config['ref_set']+'.pdf',
+        'qc/umi/'+config['ref_set']+'_duplication_rate.pdf',
+        'qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
+        'results/abundance/pcs-done.txt',
         'results/modifications/get_DM_all_plots',
         'results/modifications/get_MOCK_all_plots',
+        'results/modifications/get_BS_all_plots',
         'results/modifications/get_all_m5C_calls_plots',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/multimapper.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-4/DM/multimappers_between_clusters.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3/DM/multimappers_between_clusters.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-4/MOCK/multimappers_between_clusters.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3/MOCK/multimappers_between_clusters.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-4/BS/multimappers_between_clusters.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3/BS/multimappers_between_clusters.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_DM.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-2-mm-50_DM_multimappers_between_clusters_DM.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_MOCK.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_BS.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_DM.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-2_multimappers_between_clusters_DM.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-1_multimappers_between_clusters_DM.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_MOCK.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_BS.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/multimapper_between_refs.pdf',
         'results/coverage_plots/done.txt',
         'results/abundance/done.txt',
     output:
