modify overall rule for abundance pca plots such that it takes wild cards for prefiltering methods and tRNA reference set

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -77,7 +77,8 @@ rule run_all:
         'qc/mapping-summary/mapping-'+config['ref_set']+'.pdf',
         'qc/umi/'+config['ref_set']+'_duplication_rate.pdf',
         'qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
-        'results/abundance/pcs-done.txt',
+        'results/abundance/'+config['reads_filter']+'_'+config['ref_set']+'_pca-done.txt',
+        'results/abundance/umi_selected_pca-done.txt',
         'results/modifications/get_DM_all_plots',
         'results/modifications/get_MOCK_all_plots',
         'results/modifications/get_BS_all_plots',
