--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,7 +2,7 @@ configfile: "config/config.yaml"
 
 import pandas as pd
 
-samples_df = pd.read_csv(config["samples_tsv"], sep="\t")
+samples_df = pd.read_csv(config["samples_tsv"], sep="\s+")
 sample_name_dict = samples_df.drop_duplicates(subset='timepoint').set_index('timepoint').to_dict(orient="index")
 SAMPLES = samples_df["fastq"].to_list()
 no_bs_df = samples_df[samples_df["treatment"] != "BS"]
@@ -17,9 +17,10 @@ samples_df.set_index("fastq", inplace=True)
 sample_dict = samples_df.to_dict(orient="index")
 samples_per_treatment = {'DM': dm_samples, 'MOCK': mock_samples, 'BS': BS_SAMPLES }
 
-
 wildcard_constraints:
-    sample="[A-Za-z0-9]+",
+    #sample="[A-Za-z0-9_]+",
+    # This was modified to specific zebrafish experiment
+    sample="(Mn|Z[1-9])_i[3-8]",
     treatment = "[A-Z]+",
     c_treatment = "[A-Z]+",
     m_cutoff ="[0-9]+", #         m_cutoff="\d+",
@@ -37,7 +38,7 @@ font = {"family": "normal", "weight": "normal", "size": 7}
 
 # utility functions
 def anticodonfamily_from_rname(rname):
-    """Get anticodon family from fasta heade of refernce.
+    """Get anticodon family from fasta header of reference.
 
     Needs to be adjusted to naming scheme of reference fasta file.
     """
@@ -73,31 +74,34 @@ rule run_all:
         #'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa_sorted.fa',
         'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa',
         'qc/cluster/'+config['ref_set']+'/editdist_hist.pdf',
+        expand('qc/fastqc/raw_{sample}.json', sample=SAMPLES),
+        expand('resources/filteres-reads/a_{sample}.fastq', sample=SAMPLES),
+        expand('qc/fastqc/a_u_t_q_{sample}.html', sample=SAMPLES),
         'qc/preprocessing_summary/preproccessing.pdf',
         'qc/mapping-summary/mapping-'+config['ref_set']+'.pdf',
         'qc/umi/'+config['ref_set']+'_duplication_rate.pdf',
         'qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
         'results/abundance/'+config['reads_filter']+'_'+config['ref_set']+'_pca-done.txt',
-        'results/abundance/umi_selected_pca-done.txt',
+        #'results/abundance/umi_selected_pca-done.txt',
         'results/modifications/get_DM_all_plots',
         'results/modifications/get_MOCK_all_plots',
-        'results/modifications/get_BS_all_plots',
-        'results/modifications/get_all_m5C_calls_plots',
+        #'results/modifications/get_BS_all_plots',
+        #'results/modifications/get_all_m5C_calls_plots',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_DM.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-2-mm-50_DM_multimappers_between_clusters_DM.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_MOCK.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_BS.pdf',
+        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_BS.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_DM.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-2_multimappers_between_clusters_DM.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-1_multimappers_between_clusters_DM.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_MOCK.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_BS.pdf',
+        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_BS.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/multimapper_between_refs.pdf',
         'results/coverage_plots/done.txt',
         'results/abundance/done.txt',
-    output:
-        'results/all.txt'
-    run:
-        with open(str(output),'w') as file:
-            for f in input:
-                file.write(f+'\n')
+    #output:
+        #'results/all.txt'
+    #run:
+        #with open(str(output),'w') as file:
+            #for f in input:
+                #file.write(f+'\n')
