--- a/config/config.yaml
+++ b/config/config.yaml
@@ -155,9 +155,9 @@ modification_lineplots_cutoff:
 
 # reference set to use
 #----------------------
-#ref_set: 'selected'
+ref_set: 'selected'
 #ref_set: 'raw'
-ref_set: 'manual'
+#ref_set: 'manual'
 
 
 
