--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -71,7 +71,10 @@ include: "rules/qc.smk"
 
 rule run_all:
     input:
-        #'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa_sorted.fa',
+        # Running this with -c4 is demanding for server: too many download request
+        'resources/references/all_refs.fa', #CAVH
+        'resources/references/selected_refs.fa', #CAVH
+        'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa_sorted.fa',
         'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa',
         'qc/cluster/'+config['ref_set']+'/editdist_hist.pdf',
         expand('qc/fastqc/raw_{sample}.json', sample=SAMPLES),
@@ -82,20 +85,20 @@ rule run_all:
         'qc/umi/'+config['ref_set']+'_duplication_rate.pdf',
         'qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
         'results/abundance/'+config['reads_filter']+'_'+config['ref_set']+'_pca-done.txt',
-        #'results/abundance/umi_selected_pca-done.txt',
+        ##'results/abundance/umi_selected_pca-done.txt',
         'results/modifications/get_DM_all_plots',
         'results/modifications/get_MOCK_all_plots',
-        #'results/modifications/get_BS_all_plots',
-        #'results/modifications/get_all_m5C_calls_plots',
+        ##'results/modifications/get_BS_all_plots',
+        ##'results/modifications/get_all_m5C_calls_plots',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_DM.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-2-mm-50_DM_multimappers_between_clusters_DM.pdf',
+        ##'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-2-mm-50_DM_multimappers_between_clusters_DM.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_MOCK.pdf',
-        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_BS.pdf',
+        ##'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_BS.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_DM.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-2_multimappers_between_clusters_DM.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-1_multimappers_between_clusters_DM.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_MOCK.pdf',
-        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_BS.pdf',
+        ##'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_BS.pdf',
         'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/multimapper_between_refs.pdf',
         'results/coverage_plots/done.txt',
         'results/abundance/done.txt',
