--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -77,19 +77,19 @@ rule run_all:
         # Running this with -c4 is demanding for server: too many download request
         'resources/references/all_refs.fa', #CAVH
         'resources/references/selected_refs.fa', #CAVH
-        #'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa_sorted.fa',
-        #'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa',
-        #'qc/cluster/'+config['ref_set']+'/editdist_hist.pdf',
-        #expand('qc/fastqc/raw_{sample}.json', sample=SAMPLES),
-        #expand('resources/filteres-reads/a_{sample}.fastq', sample=SAMPLES),
-        #expand('qc/fastqc/a_u_t_q_{sample}.html', sample=SAMPLES),
-        #'qc/preprocessing_summary/preproccessing.pdf',
-        #'qc/mapping-summary/mapping-'+config['ref_set']+'.pdf',
-        #'qc/umi/'+config['ref_set']+'_duplication_rate.pdf',
-        #'qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
-        #'results/abundance/'+config['reads_filter']+'_'+config['ref_set']+'_pca-done.txt',
+        'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa_sorted.fa',
+        'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa',
+        'qc/cluster/'+config['ref_set']+'/editdist_hist.pdf',
+        expand('qc/fastqc/raw_{sample}.json', sample=SAMPLES),
+        expand('resources/filteres-reads/a_{sample}.fastq', sample=SAMPLES),
+        expand('qc/fastqc/a_u_t_q_{sample}.html', sample=SAMPLES),
+        'qc/preprocessing_summary/preproccessing.pdf',
+        'qc/mapping-summary/mapping-'+config['ref_set']+'.pdf',
+        'qc/umi/'+config['ref_set']+'_duplication_rate.pdf',
+        'qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
+        'results/abundance/'+config['reads_filter']+'_'+config['ref_set']+'_pca-done.txt',
         ###'results/abundance/umi_selected_pca-done.txt',
-        #'results/modifications/get_DM_all_plots',
+        'results/modifications/get_DM_all_plots',
         #'results/modifications/get_MOCK_all_plots',
         ###'results/modifications/get_BS_all_plots',
         ###'results/modifications/get_all_m5C_calls_plots',
