--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -80,6 +80,8 @@ rule run_all:
         # Running this with -c4 is demanding for server: too many download request
         # CAVH: ref_genome.smk
         'resources/references/all_refs.fa', #CAVH
+        # CAVH: Get all raw/ files THIS IS TEMPORAL
+        #'resources/coverage/pre-filter_umi/raw/min_coverage_summary_DM-with-max.tsv',
         'resources/references/selected_refs.fa', #CAVH
         # ref_set='selected'
         'resources/references/alignment/'+config['ref_set']+'_tRNAs.fa_sorted.fa',
@@ -93,14 +95,15 @@ rule run_all:
         expand('qc/fastqc/a_u_t_q_{sample}.html', sample=SAMPLES),
         # Summary plots: preprocessing and mapping
         'qc/preprocessing_summary/preproccessing.pdf',
+        # Here it does the mapping to selected references
         'qc/mapping-summary/mapping-'+config['ref_set']+'.pdf',
         'qc/umi/'+config['ref_set']+'_duplication_rate.pdf',
         'qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
         'results/abundance/'+config['reads_filter']+'_'+config['ref_set']+'_pca-done.txt',
         ###'results/abundance/umi_selected_pca-done.txt',
         # CAVH: modifications.smk
-        'results/modifications/get_DM_all_plots',
-        'results/modifications/get_MOCK_all_plots',
+        #'results/modifications/get_DM_all_plots',
+        #'results/modifications/get_MOCK_all_plots',
         ###'results/modifications/get_BS_all_plots',
         ###'results/modifications/get_all_m5C_calls_plots',
         #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_DM.pdf',
