added barcode trimming and correct umi extraction

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -111,16 +111,16 @@ rule run_all:
         #'results/modifications/get_MOCK_all_plots',
         ###'results/modifications/get_BS_all_plots',
         ###'results/modifications/get_all_m5C_calls_plots',
-        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_DM.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_DM.pdf',
         ###'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-2-mm-50_DM_multimappers_between_clusters_DM.pdf',
         #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_MOCK.pdf',
         ###'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_BS.pdf',
-        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_DM.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_DM.pdf',
         #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-2_multimappers_between_clusters_DM.pdf',
         ##'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-1_multimappers_between_clusters_DM.pdf',
         #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_MOCK.pdf',
         ###'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_BS.pdf',
-        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/multimapper_between_refs.pdf',
+        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/multimapper_between_refs.pdf',
         'results/coverage_plots/done.txt',
         #'results/abundance/done.txt',
     #output:
