--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -97,13 +97,13 @@ rule run_all:
         #expand('qc/fastqc/raw_{sample}.json', sample=SAMPLES),
         # This is redundant since it is calculated on step two ('resources/references/selected_refs.fa')
         #expand('resources/filteres-reads/a_{sample}.fastq', sample=SAMPLES),
-        #expand('qc/fastqc/a_u_t_q_{sample}.html', sample=SAMPLES),
+        expand('qc/fastqc/a_u_t_q_{sample}.html', sample=SAMPLES),
         # Summary plots: preprocessing and mapping
-        'qc/preprocessing_summary/preproccessing.pdf',
+        #'qc/preprocessing_summary/preproccessing.pdf',
         # Here it does the mapping to selected references
-        'qc/mapping-summary/mapping-'+config['ref_set']+'.pdf',
-        'qc/umi/'+config['ref_set']+'_duplication_rate.pdf',
-        'qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
+        #'qc/mapping-summary/mapping-'+config['ref_set']+'.pdf',
+        #'qc/umi/'+config['ref_set']+'_duplication_rate.pdf',
+        #'qc/cluster/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/dist_multimapper.pdf',
         #'results/abundance/'+config['reads_filter']+'_'+config['ref_set']+'_pca-done.txt',
         ###'results/abundance/umi_selected_pca-done.txt',
         # CAVH: modifications.smk
@@ -111,17 +111,17 @@ rule run_all:
         #'results/modifications/get_MOCK_all_plots',
         ###'results/modifications/get_BS_all_plots',
         ###'results/modifications/get_all_m5C_calls_plots',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_DM.pdf',
+        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_DM.pdf',
         ###'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-2-mm-50_DM_multimappers_between_clusters_DM.pdf',
         #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_MOCK.pdf',
         ###'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-ed-3-mm-50_DM_multimappers_between_clusters_BS.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_DM.pdf',
+        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_DM.pdf',
         #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-2_multimappers_between_clusters_DM.pdf',
         ##'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-1_multimappers_between_clusters_DM.pdf',
         #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_MOCK.pdf',
         ###'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/cluster-editdist-3_multimappers_between_clusters_BS.pdf',
-        'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/multimapper_between_refs.pdf',
-        'results/coverage_plots/done.txt',
+        #'results/multimappers/pre-filter_'+config['reads_filter']+'/'+config['ref_set']+'/multimapper_between_refs.pdf',
+        #'results/coverage_plots/done.txt',
         #'results/abundance/done.txt',
     #output:
         #'results/all.txt'
